--- a/geturguide.css
+++ b/geturguide.css
@@ -153,6 +153,10 @@ body {
 }
 
 /* Experience Section */
+.eco{
+  font-size: 20px;
+  font-family: fantasy;
+}
 .experience {
   text-align: center;
   padding: 50px 0;
